Fix unstyled content flashes & scrollbar reflowing

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,10 @@
 @import "styles/Podcast.css";
 @import "styles/Fonts.css";
 
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     margin: 0;
     font-family: 'Bitter', serif;
